first selector practice

--- a/firstDoc.css
+++ b/firstDoc.css
@@ -1,8 +1,4 @@
 
-ul {
-  color: #FFA651;
-  border: black 1px solid;
-}
 
 h1 {
   color: rgba(100, 0, 100, .6);
@@ -22,4 +18,20 @@ body {
 
 .to_do_list {
   text-decoration: line-through;
+}
+
+/*div#interests {
+  color: pink;
+}*/
+/*
+ul li {
+  color: red;
+}*/
+/*
+h1 + form {
+  color: yellow;
+}*/
+
+li.to_do_list:nth-of-type(even){
+  background-color: purple;
 }
