--- a/Blog.css
+++ b/Blog.css
@@ -19,6 +19,9 @@ p:nth-of-type(1){
 
 }
 
-h1 {
+.date {
   padding-bottom: 15px;
+  color: orange;
+  text-transform: uppercase;
+  letter-spacing: 0.2rem;
 }
